--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ course3/week1/fsq/umn_foursquare_datasets/ratings.dat
 course3/week1/fsq/umn_foursquare_datasets/venues.dat
 course3/week1/fsq/umn_foursquare_datasets/socialgraph.dat
 course3/week1/fsq/umn_foursquare_datasets/users.dat
+course3/week1/checkins.csv
+course2/week3/sklearn.case_part1.ipynb
